public abstract class CandyBar {
	public abstract String toString();
}