public abstract class CandyBarFactory {

	public abstract CandyBar createCandyBar();


}