public class KitKat extends CandyBar {
   public String toString() { return "KitKat"; }
}