public class KitKatFactory extends CandyBarFactory {

	public CandyBar createCandyBar() {
		return new KitKat();
	}

}