public class Snickers extends CandyBar {
    public String toString() { return "Snickers"; }
}